[tool.poetry]
name = "collect"
version = "0.1.0"
description = ""
authors = ["Asher <asher_github@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydriller = "^2.6"


[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
